<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/id_label"
        android:text="@string/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/name_label"
        android:text="@string/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/phone_label"
        android:text="@string/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/healthPlan_label"
        android:text="@string/healthPlan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/healthPlanNumb_label"
        android:text="@string/healthPlanNumber_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/schedulingDate_label"
        android:text="@string/schedulingDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="205dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/schedulingHour_label"
        android:text="@string/schedulingHour_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />



    <TextView
        android:id="@+id/id_value"
        android:text="@string/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/id_label"
        android:layout_marginLeft="130dp" />

    <TextView
        android:id="@+id/fullname_value"
        android:text="@string/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/name_label"
        android:layout_alignLeft="@+id/id_value" />

    <TextView
        android:id="@+id/phone_value"
        android:text="@string/phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/phone_label"
        android:layout_alignLeft="@+id/id_value" />


    <TextView
        android:id="@+id/healthPlan_value"
        android:text="@string/healthPlan_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/healthPlan_label"
        android:layout_alignLeft="@+id/id_value" />

    <TextView
        android:id="@+id/healthPlanNumber_value"
        android:text="@string/healthPlanNumber_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/healthPlanNumb_label"
        android:layout_alignLeft="@+id/id_value" />

    <TextView
        android:id="@+id/schedulingDate_value"
        android:text="@string/schedulingDate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/schedulingDate_label"
        android:layout_alignLeft="@+id/id_value" />

    <TextView
        android:id="@+id/schedulingHour_value"
        android:text="@string/schedulingHour_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/schedulingHour_label"
        android:layout_alignLeft="@+id/id_value" />

</RelativeLayout>